--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "travel-Seville",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "A guide to Seville, Spain",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Duke Nguyen <hnguyen1179@berkeley.edu>",
   "dependencies": {
-    "gatsby": "^2.21.37",
+    "gatsby": "^2.22.4",
     "gatsby-image": "^2.4.4",
     "gatsby-plugin-manifest": "^2.4.5",
     "gatsby-plugin-offline": "^3.2.3",
