--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Duke Nguyen <hnguyen1179@berkeley.edu>",
   "dependencies": {
+    "animejs": "^3.2.0",
     "gatsby": "^2.22.4",
     "gatsby-image": "^2.4.4",
     "gatsby-plugin-manifest": "^2.4.5",
