--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "version": "0.1.0",
   "author": "Duke Nguyen <hnguyen1179@berkeley.edu>",
   "dependencies": {
+    "@react-google-maps/api": "^1.9.8",
     "animejs": "^3.2.0",
+    "flubber": "^0.4.2",
     "gatsby": "^2.22.4",
     "gatsby-image": "^2.4.4",
     "gatsby-plugin-manifest": "^2.4.5",
@@ -16,15 +18,19 @@
     "gatsby-plugin-transition-link": "^1.18.0",
     "gatsby-source-filesystem": "^2.3.4",
     "gatsby-transformer-sharp": "^2.5.2",
-    "gsap": "^3.2.6",
+    "gsap": "^3.4.1",
     "node-sass": "^4.14.1",
+    "npm-check": "^5.9.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
+    "react-spring": "^8.0.27",
+    "react-transition-group": "^4.4.1",
     "smooth-scrollbar": "^8.5.2"
   },
   "devDependencies": {
+    "jest": "^26.4.0",
     "prettier": "2.0.5"
   },
   "keywords": [
@@ -38,7 +44,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
