--- a/package.json
+++ b/package.json
@@ -30,8 +30,12 @@
     "smooth-scrollbar": "^8.5.2"
   },
   "devDependencies": {
+    "babel-jest": "^26.3.0",
+    "babel-preset-gatsby": "^0.5.5",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^26.4.0",
-    "prettier": "2.0.5"
+    "prettier": "2.0.5",
+    "react-test-renderer": "^16.13.1"
   },
   "keywords": [
     "gatsby"
@@ -52,5 +56,6 @@
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
-  }
+  },
+  "type": "module"
 }
