--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "@react-google-maps/api": "^1.9.8",
     "animejs": "^3.2.0",
     "flubber": "^0.4.2",
-    "gatsby": "^2.22.4",
+    "gatsby": "2.23.3",
     "gatsby-image": "^2.4.4",
     "gatsby-plugin-manifest": "^2.4.5",
     "gatsby-plugin-offline": "^3.2.3",
     "gatsby-plugin-react-helmet": "^3.3.1",
     "gatsby-plugin-sass": "^2.3.2",
-    "gatsby-plugin-sharp": "^2.6.4",
+    "gatsby-plugin-sharp": "^2.7.1",
     "gatsby-plugin-transition-link": "^1.18.0",
     "gatsby-source-filesystem": "^2.3.4",
     "gatsby-transformer-sharp": "^2.5.2",
@@ -25,6 +25,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
+    "react-scroll": "^1.8.1",
     "react-spring": "^8.0.27",
     "react-transition-group": "^4.4.1",
     "smooth-scrollbar": "^8.5.2"
