--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "version": "0.1.0",
   "author": "Duke Nguyen <hnguyen1179@berkeley.edu>",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.12",
     "@react-google-maps/api": "^1.9.8",
-    "animejs": "^3.2.0",
+    "disable-scroll": "^0.5.1",
     "flubber": "^0.4.2",
     "gatsby": "2.23.3",
     "gatsby-image": "^2.4.4",
+    "gatsby-plugin-fontawesome-css": "^1.0.0",
     "gatsby-plugin-manifest": "^2.4.5",
     "gatsby-plugin-offline": "^3.2.3",
     "gatsby-plugin-react-helmet": "^3.3.1",
@@ -25,10 +29,9 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
-    "react-scroll": "^1.8.1",
+    "react-intersection-observer": "^8.30.2",
     "react-spring": "^8.0.27",
-    "react-transition-group": "^4.4.1",
-    "smooth-scrollbar": "^8.5.2"
+    "react-transition-group": "^4.4.1"
   },
   "devDependencies": {
     "babel-jest": "^26.3.0",
