--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "version": "0.1.0",
   "author": "Duke Nguyen <hnguyen1179@berkeley.edu>",
   "dependencies": {
+    "@babel/plugin-transform-spread": "7.12.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.12",
     "@react-google-maps/api": "^1.9.8",
     "disable-scroll": "^0.5.1",
     "flubber": "^0.4.2",
-    "gatsby": "2.23.3",
+    "gatsby": "^2.32.2",
     "gatsby-image": "^2.4.4",
     "gatsby-plugin-fontawesome-css": "^1.0.0",
     "gatsby-plugin-manifest": "^2.4.5",
@@ -19,7 +20,7 @@
     "gatsby-plugin-react-helmet": "^3.3.1",
     "gatsby-plugin-sass": "^2.3.2",
     "gatsby-plugin-sharp": "^2.7.1",
-    "gatsby-plugin-transition-link": "^1.18.0",
+    "gatsby-plugin-transition-link": "^1.20.5",
     "gatsby-source-filesystem": "^2.3.4",
     "gatsby-transformer-sharp": "^2.5.2",
     "gsap": "^3.4.1",
@@ -34,6 +35,9 @@
     "react-transition-group": "^4.4.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.12.13",
+    "@babel/core": "^7.12.13",
+    "@babel/plugin-transform-classes": "^7.12.13",
     "babel-jest": "^26.3.0",
     "babel-preset-gatsby": "^0.5.5",
     "identity-obj-proxy": "^3.0.0",
@@ -56,7 +60,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/hnguyen1179/travelSeville"
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
